# oce

./: Cargo.toml  LICENSE  README.md
oce-ftx-rs/: Cargo.toml
oce-ftx-rs/src/: errors.rs  lib.rs
oce-ftx-rs/src/rest/: get_markets.rs  get_orderbook.rs  get_single_market.rs  get_trades.rs  mod.rs
oce-ftx-rs/src/rest/markets/: get_single_market.rs
oce-ftx-rs/src/schema/: market.rs  mod.rs  orderbook.rs  trade.rs
oce-ftx-rs/src/schema/markets/: candle.rs  market.rs  mod.rs  orderbook.rs  trade.rs
oce-ftx-rs/src/schema/spot_margin/: borrow_history.rs  borrow_rate.rs  borrow_summary.rs  history.rs  lending_history.rs  lending_info.rs  lending_rate.rs  market_info.rs  mod.rs  offer.rs
oce-gen/: Cargo.toml  Justfile
oce-gen/definitions/ftx/: get_markets_response.toml  market.toml  markets.toml  mod.toml  orderbook.toml  trade.toml
oce-gen/definitions/ftx/markets/: candle.toml  market.toml  mod.toml  orderbook.toml  trade.toml
oce-gen/definitions/ftx/rest/markets/: get_single_market.toml
oce-gen/definitions/ftx/schema/: mod.toml
oce-gen/definitions/ftx/schema/markets/: candle.toml  market.toml  mod.toml  orderbook.toml
oce-gen/definitions/ftx/spot_margin/: borrow_history.toml  borrow_rate.toml  borrow_summary.toml  history.toml  lending_history.toml  lending_info.toml  lending_rate.toml  market_info.toml  mod.toml  offer.toml
oce-gen/schema/: mod..rs
oce-gen/src/: main.rs  rest.rs  schema.rs
oce-gen/templates/rust/rest/: struct.template
oce-gen/templates/rust/schema/: enum.template  mod.template  struct.template
(+10 files in other folders)
