[package]
name = "oce-ftx-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
thiserror = "1.0"
rust_decimal = "1.26"
chrono = { version = "0.4", default-features = false, features = ["std", "serde"] }
serde_with = "2"
serde_urlencoded = "0.7"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0"
